--- a/farmacia_interface/requirements.txt
+++ b/farmacia_interface/requirements.txt
@@ -1,9 +1,9 @@
-# Core dependencies
+# Core interface dependencies
 streamlit>=1.28.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 
-# Computer Vision & ML
+# Computer Vision
 opencv-python>=4.8.0
 ultralytics>=8.0.0
 torch>=1.8.0
@@ -14,30 +14,13 @@ scikit-image>=0.18.0
 Pillow>=10.0.0
 numpy>=1.24.0
 
-# Barcode processing
+# Barcode processing (VERSIÓN COMPATIBLE CON PYTHON 3.9)
 pyzbar>=0.1.9
-zxingcpp>=2.0.0
+zxing-cpp>=1.4.0,<2.0.0
 
-# Data analysis
+# API and utilities
+requests>=2.28.0
 pandas>=2.0.0
-matplotlib>=3.6.0
-seaborn>=0.12.0
-plotly>=5.17.0
-
-# API and web
-requests>=2.31.0
+pathlib
 python-multipart>=0.0.6
-pydantic>=2.4.0
-
-# Utilities
-pathlib2>=2.3.0
-python-dotenv>=1.0.0
-tqdm>=4.65.0
-
-# Testing (optional)
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-
-# Development (optional)
-black>=23.0.0
-flake8>=6.0.0
+matplotlib>=3.6.0
