--- a/farmacia_interface/requirements.txt
+++ b/farmacia_interface/requirements.txt
@@ -1,7 +1,25 @@
 streamlit
 pandas
 numpy
+
+# Computer Vision
 opencv-python-headless
+ultralytics
+torch
+torchvision
+scikit-image
+
+# Image processing
 Pillow
+
+# Barcode processing
 pyzbar
+zxing-cpp
+
+# API and utilities
 requests
+fastapi
+uvicorn
+python-multipart
+matplotlib
+pathlib
